--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,8 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
     <LinearLayout
@@ -54,6 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
+            android:visibility="gone"
             android:layout_marginBottom="30dp" />
 
         <LinearLayout
@@ -63,6 +62,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/facebookLoginBtn"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/facebook_image"/>
