--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
+        android:padding="20dp"
         android:orientation="vertical">
 
         <TextView
@@ -17,6 +17,7 @@
             android:text="이메일"/>
 
         <EditText
+            android:id="@+id/emailEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
@@ -29,18 +30,21 @@
             android:text="비밀번호"/>
 
         <EditText
+            android:id="@+id/passwordEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="비밀번호를 입력하세요"/>
 
         <Button
+            android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="로그인"/>
 
         <Button
+            android:id="@+id/sighUpBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="회원가입"/>
@@ -55,16 +59,25 @@
             android:visibility="gone"
             android:layout_marginBottom="30dp" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="쉬운 로그인하기"/>
+
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/facebookLoginBtn"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/facebook_image"/>
 
             <TextView
@@ -72,19 +85,12 @@
                 android:layout_height="50dp"/>
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/kakaotalk_image"/>
 
         </LinearLayout>
 
-
-
-
-
     </LinearLayout>
-
-
-
 
 </layout>
