카톡로그인 라이브러리 설치 - 기타 세팅 사항 진행 (Global)어쩌구

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -85,6 +85,7 @@
                 android:layout_height="50dp"/>
 
             <ImageView
+                android:id="@+id/kakaoLoginBtn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/kakaotalk_image"/>
