--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -15,24 +15,12 @@
         android:layout_marginTop="10dp"
         android:text="약속을 구별할 문구"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
         <EditText
-            android:layout_width="250dp"
+            android:id="@+id/titleEdt"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:hint="약속을 구별할 문구를 작성하는 칸"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:text="입력"/>
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,6 +51,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/dateTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="17dp"
@@ -70,6 +59,7 @@
             android:text="약속 일자" />
 
         <TextView
+            android:id="@+id/timeTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="15dp"
@@ -90,12 +80,14 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/paceSearchEdt"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:hint="장소명"/>
 
         <Button
+            android:id="@+id/placeSearchBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -129,6 +121,7 @@
         android:text="여기에지도 배치, 검색 결과를 지도로 표현"/>
 
     <Button
+        android:id="@+id/okBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="약속 등록하기"/>
