--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -114,11 +114,19 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/mapView"
+<!--    <LinearLayout-->
+<!--        android:id="@+id/mapView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:gravity="center">-->
+
+
+    <fragment
+        android:id="@+id/naverMapView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical" />
 
         <Button
             android:id="@+id/okBtn"
@@ -126,7 +134,7 @@
             android:layout_height="wrap_content"
             android:text="약속 등록하기"/>
 
-    </LinearLayout>
+    </fragment>
 
 </LinearLayout>
 
