--- a/app/src/main/res/layout/appointment_list_item.xml
+++ b/app/src/main/res/layout/appointment_list_item.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/titleTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="약속제목"
@@ -13,6 +14,7 @@
         android:textSize="22dp"/>
 
     <TextView
+        android:id="@+id/dateTimeTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="약속일시"
@@ -21,6 +23,7 @@
         android:textSize="15dp"/>
 
     <TextView
+        android:id="@+id/placeNameTxt"
         android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
