--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -114,27 +114,17 @@
 
     </LinearLayout>
 
-<!--    <LinearLayout-->
-<!--        android:id="@+id/mapView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="200dp"-->
-<!--        android:gravity="center">-->
-
-
     <fragment
         android:id="@+id/naverMapView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:gravity="center"
-        android:orientation="vertical" />
+        android:layout_height="250dp"
+        class="com.naver.maps.map.MapFragment" />
 
         <Button
             android:id="@+id/okBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="약속 등록하기"/>
-
-    </fragment>
 
 </LinearLayout>
 
