--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -98,6 +98,7 @@
         android:id="@+id/naverMapView"
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        app:navermap_zoom="20"
         class="com.naver.maps.map.MapFragment" />
 
         <Button
