--- a/app/src/main/res/layout/appointment_list_item.xml
+++ b/app/src/main/res/layout/appointment_list_item.xml
@@ -31,5 +31,13 @@
         android:textSize="18dp"
         android:layout_marginTop="20dp"/>
 
+    <ImageView
+        android:id="@+id/viewPlaceMapBtn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="5dp"
+        android:padding="10dp"
+        android:src="@drawable/flag_yellow_marker_icon"/>
+
 </LinearLayout>
 </layout>
