--- a/app/src/main/res/layout/appointment_list_item.xml
+++ b/app/src/main/res/layout/appointment_list_item.xml
@@ -13,31 +13,42 @@
         android:padding="10dp"
         android:textSize="22dp"/>
 
-    <TextView
-        android:id="@+id/dateTimeTxt"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="약속일시"
-        android:padding="10dp"
-        android:layout_gravity="right"
-        android:textSize="15dp"/>
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/placeNameTxt"
-        android:padding="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="장소이름"
-        android:textSize="18dp"
-        android:layout_marginTop="20dp"/>
+        <ImageView
+            android:id="@+id/viewPlaceMapBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="5dp"
+            android:padding="10dp"
+            android:src="@drawable/flag_yellow_marker_icon"/>
 
-    <ImageView
-        android:id="@+id/viewPlaceMapBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="5dp"
-        android:padding="10dp"
-        android:src="@drawable/flag_yellow_marker_icon"/>
+        <TextView
+            android:id="@+id/placeNameTxt"
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="장소이름"
+            android:textSize="18dp"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/dateTimeTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="약속일시"
+            android:padding="10dp"
+            android:textSize="15dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
+
 </layout>
