--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -11,21 +11,21 @@
 
     <TextView
         android:layout_width="380dp"
-        android:layout_height="40dp"
+        android:layout_height="20dp"
         android:layout_marginTop="10dp"
-        android:text="약속을 구별할 문구"/>
+        android:text="약속을 입력하세요"/>
 
         <EditText
             android:id="@+id/titleEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:hint="약속을 구별할 문구를 작성하는 칸"/>
+            android:hint="약속할 내용"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="0dp"
         android:orientation="horizontal">
 
         <TextView
