--- a/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/app/src/main/res/layout/my_custom_action_bar.xml
@@ -19,6 +19,7 @@
         android:layout_height="40dp"
         android:src="@drawable/profile_icon"
         android:layout_gravity="right|center_vertical"
+        android:visibility="gone"
         android:layout_marginRight="10dp"/>
 
 
