--- a/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/app/src/main/res/layout/my_custom_action_bar.xml
@@ -20,6 +20,7 @@
         android:src="@drawable/profile_icon"
         android:layout_gravity="right|center_vertical"
         android:visibility="gone"
+        android:padding="5dp"
         android:layout_marginRight="10dp"/>
 
 
