--- a/app/src/main/res/layout/activity_my_settinsg.xml
+++ b/app/src/main/res/layout/activity_my_settinsg.xml
@@ -22,12 +22,29 @@
                 android:src="@drawable/default_profile_icon"
                 app:civ_border_width="2dp"/>
 
-            <TextView
-                android:id="@+id/nicknameTxt"
+            <LinearLayout
+                android:id="@+id/editNicknameLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="닉네임"
-                android:layout_marginTop="10dp"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/nicknameTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="닉네임"
+                    android:layout_marginTop="10dp"/>
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/edit_icon"
+                    android:layout_marginTop="7dp"
+                    android:layout_marginLeft="10dp"/>
+
+            </LinearLayout>
+
+
             
             <TextView
                 android:layout_width="match_parent"
