--- a/app/src/main/res/layout/activity_my_settinsg.xml
+++ b/app/src/main/res/layout/activity_my_settinsg.xml
@@ -28,11 +28,21 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/socialLoginImg"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/person_icon"
+                    android:layout_marginTop="7dp"
+                    android:padding="3dp"
+                    android:layout_marginRight="10dp"/>
+
                 <TextView
                     android:id="@+id/nicknameTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="닉네임"
+                    android:textSize="19sp"
                     android:layout_marginTop="10dp"/>
 
                 <ImageView
@@ -40,6 +50,7 @@
                     android:layout_height="25dp"
                     android:src="@drawable/edit_icon"
                     android:layout_marginTop="7dp"
+                    android:padding="2dp"
                     android:layout_marginLeft="10dp"/>
 
             </LinearLayout>
