--- a/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/app/src/main/res/layout/my_custom_action_bar.xml
@@ -23,5 +23,14 @@
         android:padding="5dp"
         android:layout_marginRight="10dp"/>
 
+    <ImageView
+        android:id="@+id/editPlaceImg"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/plus_icon"
+        android:layout_gravity="right|center_vertical"
+        android:padding="5dp"
+        android:visibility="gone"/>
+
 
 </FrameLayout>
