--- a/app/src/main/res/layout/activity_edit_my_place.xml
+++ b/app/src/main/res/layout/activity_edit_my_place.xml
@@ -6,28 +6,40 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:padding="20dp"
         tools:context=".EditMyPlaceActivity">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="장소"/>
+            android:text="장소"
+            android:textSize="20sp"/>
+
+        <EditText
+            android:id="@+id/nameEdt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="저장할 장소를 입력하세요"
+            android:singleLine="true"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="위도"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="경도"/>
+            android:text="위치 선택"/>
 
         <fragment
-            android:id="@+id/naverMapFrag"
+            android:id="@+id/map_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
             class="com.naver.maps.map.MapFragment" />
+
+        <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="내 장소 등록하기"/>
 
     </LinearLayout>
 </layout>
