--- a/app/src/main/res/layout/activity_edit_my_place.xml
+++ b/app/src/main/res/layout/activity_edit_my_place.xml
@@ -13,7 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="장소"
-            android:textSize="20sp"/>
+            android:textSize="17sp"/>
 
         <EditText
             android:id="@+id/nameEdt"
@@ -25,6 +25,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="위치 선택"/>
 
         <fragment
