--- a/app/src/main/res/layout/activity_my_settinsg.xml
+++ b/app/src/main/res/layout/activity_my_settinsg.xml
@@ -26,6 +26,7 @@
                 android:id="@+id/editNicknameLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -56,7 +57,6 @@
             </LinearLayout>
 
 
-            
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -67,7 +67,7 @@
                 android:id="@+id/readyTimeLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:padding="20dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -85,7 +85,8 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginRight="20dp"
-                    android:src="@drawable/right_arrow_icon"/>
+                    android:padding="5dp"
+                    android:src="@drawable/change_pencil_icon"/>
 
                 <TextView
                     android:id="@+id/readyTimeTxt"
@@ -97,11 +98,18 @@
 
             </LinearLayout>
 
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#DFDFDF"/>
+
+
             <LinearLayout
                 android:id="@+id/passwordLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:padding="20dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -119,29 +127,38 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginRight="20dp"
-                    android:src="@drawable/right_arrow_icon"/>
+                    android:padding="5dp"
+                    android:src="@drawable/change_pencil_icon"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="30분"
                     android:textSize="18sp"
+                    android:visibility="invisible"
                     android:textColor="@color/black"/>
 
             </LinearLayout>
 
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#DFDFDF"/>
+
+
             <LinearLayout
-                android:id="@+id/placeLayout"
+                android:id="@+id/myPlacesLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:padding="20dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="비밀번호 변경하기"/>
+                    android:text="내 출발 장소 관리"/>
 
                 <TextView
                     android:layout_width="0dp"
@@ -152,12 +169,13 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginRight="20dp"
-                    android:src="@drawable/right_arrow_icon"/>
+                    android:padding="5dp"
+                    android:src="@drawable/change_pencil_icon"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="30분"
+                    android:text=" 장소"
                     android:textSize="18sp"
                     android:textColor="@color/black"/>
 
