--- a/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/app/src/main/res/layout/my_custom_action_bar.xml
@@ -30,6 +30,7 @@
         android:src="@drawable/plus_icon"
         android:layout_gravity="right|center_vertical"
         android:padding="5dp"
+        android:layout_marginRight="5dp"
         android:visibility="gone"/>
 
 
