--- a/app/src/main/res/layout/my_place_list_item.xml
+++ b/app/src/main/res/layout/my_place_list_item.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:text="장소 이름"
         android:textSize="17sp"/>
+
     <TextView
+        android:id="@+id/isPrimaryTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="기본"
@@ -28,6 +30,7 @@
         android:layout_weight="1"/>
 
     <ImageView
+        android:id="@+id/viewPlaceMapBtn"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/marker_pin_icon"
