--- a/app/src/main/res/layout/my_place_list_item.xml
+++ b/app/src/main/res/layout/my_place_list_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="20dp"
+    android:id="@+id/backgroundLayout"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
