--- a/app/src/main/res/layout/my_place_list_item.xml
+++ b/app/src/main/res/layout/my_place_list_item.xml
@@ -2,40 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:id="@+id/backgroundLayout"
-    android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:id="@+id/backgroundLayout"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/placeNameTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="장소 이름"
+            android:textSize="17sp"/>
+
+        <TextView
+            android:id="@+id/isPrimaryTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="기본"
+            android:textSize="12sp"
+            android:padding="3dp"
+            android:background="@color/red"
+            android:paddingLeft="5dp"
+            android:textColor="@color/white"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
+        <ImageView
+            android:id="@+id/viewPlaceMapBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/flag_yellow_marker_icon"
+            android:padding="5dp"/>
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/placeNameTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="장소 이름"
-        android:textSize="17sp"/>
-
-    <TextView
-        android:id="@+id/isPrimaryTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="기본"
-        android:textSize="12sp"
-        android:padding="3dp"
-        android:background="@color/red"
-        android:paddingLeft="5dp"
-        android:textColor="@color/white"/>
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
-
-    <ImageView
-        android:id="@+id/viewPlaceMapBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/flag_yellow_marker_icon"
-        android:padding="5dp"/>
-
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#DFDFDF"
+        android:layout_marginTop="5dp"/>
 
 </LinearLayout>
