--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -71,6 +71,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="출발지"
+        android:layout_marginTop="15dp"/>
+
+    <Spinner
+        android:id="@+id/startPlaceSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="장소"/>
 
     <LinearLayout
