--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -9,114 +9,148 @@
     android:padding="20dp"
     tools:context=".EditAppoinmentActivity">
 
-    <TextView
-        android:layout_width="380dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="10dp"
-        android:text="약속을 입력하세요"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <EditText
-            android:id="@+id/titleEdt"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:hint="약속할 내용"/>
+            android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="0dp"
-        android:orientation="horizontal">
+            <TextView
+                android:layout_width="380dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="10dp"
+                android:text="약속을 입력하세요"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="약속한 시간"
-            android:textSize="20dp"
-            android:layout_marginTop="20dp"/>
+            <EditText
+                android:id="@+id/titleEdt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:layout_marginTop="5dp"
+                android:hint="약속할 내용"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:hint="클릭 시 설정 가능!"
-            android:layout_marginTop="20dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="0dp"
+                android:orientation="horizontal">
 
-    </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="약속한 시간"
+                    android:textSize="20dp"
+                    android:layout_marginTop="20dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:hint="클릭 시 설정 가능!"
+                    android:layout_marginTop="20dp"/>
 
-        <TextView
-            android:id="@+id/dateTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="17dp"
-            android:padding="10dp"
-            android:text="약속 일자" />
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/timeTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:textSize="17dp"
-            android:text="약속 시간"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:orientation="horizontal">
 
-    </LinearLayout>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="출발지"
-        android:layout_marginTop="15dp"/>
+                <TextView
+                    android:id="@+id/dateTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="17dp"
+                    android:padding="10dp"
+                    android:text="약속 일자" />
 
-    <Spinner
-        android:id="@+id/startPlaceSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="장소"/>
+                <TextView
+                    android:id="@+id/timeTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:textSize="17dp"
+                    android:text="약속 시간"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
 
-        <EditText
-            android:id="@+id/paceSearchEdt"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:hint="장소명"/>
+            </LinearLayout>
 
-        <Button
-            android:id="@+id/placeSearchBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:text="검색"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="출발지"
+                android:layout_marginTop="5dp"/>
 
-    </LinearLayout>
+            <Spinner
+                android:id="@+id/startPlaceSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dialog"/>
 
-    <fragment
-        android:id="@+id/naverMapView"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        app:navermap_zoom="20"
-        class="com.naver.maps.map.MapFragment" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="약속 장소"/>
 
-        <Button
-            android:id="@+id/okBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="약속 등록하기"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/paceSearchEdt"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:hint="약속 장소를 입력해주세요"/>
+
+                <Button
+                    android:id="@+id/placeSearchBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:text="입력하기"/>
+
+            </LinearLayout>
+
+            <fragment
+                android:id="@+id/naverMapView"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                app:navermap_zoom="20"
+                android:layout_marginTop="10dp"
+                class="com.naver.maps.map.MapFragment" />
+
+            <Button
+                android:id="@+id/okBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="약속 등록하기"/>
+
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
 
