프로필 사진 정보를 UserData에서 파싱 - MyProfile에서만 우선 적용(Glide)

--- a/app/src/main/res/layout/activity_my_settinsg.xml
+++ b/app/src/main/res/layout/activity_my_settinsg.xml
@@ -161,7 +161,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="내 출발 장소 관리"/>
+                    android:text="내 출발 장소 관리하기"/>
 
                 <TextView
                     android:layout_width="0dp"
