--- a/app/src/main/res/layout/activity_edit_my_place.xml
+++ b/app/src/main/res/layout/activity_edit_my_place.xml
@@ -19,7 +19,7 @@
             android:id="@+id/nameEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="저장할 장소를 입력하세요"
+            android:hint="저장할 장소의 이름을 입력하세요"
             android:singleLine="true"/>
 
         <TextView
@@ -40,6 +40,7 @@
             android:id="@+id/saveBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:text="내 장소 등록하기"/>
 
     </LinearLayout>
