친구 목록 표시 준비 중

--- a/app/src/main/res/layout/activity_my_settinsg.xml
+++ b/app/src/main/res/layout/activity_my_settinsg.xml
@@ -216,6 +216,46 @@
                 android:layout_height="1dp"
                 android:background="#DFDFDF"/>
 
+            <LinearLayout
+                android:id="@+id/myFriendLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:text="내 친구 목록 관리하기"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginRight="20dp"
+                    android:padding="5dp"
+                    android:src="@drawable/change_pencil_icon"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" 관리"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#DFDFDF"/>
+
         </LinearLayout>
 
     </LinearLayout>
