친구목록 액티비티 - 탭레이아웃 구조로 변경

--- a/app/src/main/res/layout/activity_view_my_friends_list.xml
+++ b/app/src/main/res/layout/activity_view_my_friends_list.xml
@@ -8,14 +8,15 @@
         android:orientation="vertical"
         tools:context=".ViewMyFriendsListActivity">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/friendsRecyclerView"
+        <com.google.android.material.tabs.TabLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:id="@+id/friendsTabLayout"/>
 
-
-
-        </androidx.recyclerview.widget.RecyclerView>
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/friendsViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 
 
