--- a/app/src/main/res/layout/fragment_my_friends_list.xml
+++ b/app/src/main/res/layout/fragment_my_friends_list.xml
@@ -5,9 +5,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/myFriendsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 </layout>
