친구추가화면의 UI를 작업

--- a/app/src/main/res/layout/friend_list_item.xml
+++ b/app/src/main/res/layout/friend_list_item.xml
@@ -28,6 +28,7 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginLeft="5dp"
-        android:src="@drawable/facebook_logo_icon"/>
+        android:padding="3dp"
+        android:src="@drawable/profile_icon"/>
 
 </LinearLayout>
