검색 목록을 보여줄 리싸이클러 어댑터 생성

--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -19,7 +19,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="검색할 친구를 2자 이상 입력해 주세요"/>
+                android:hint="2자 이상 입력해 주세요"/>
 
             <Button
                 android:id="@+id/searchBtn"
