flowlayout 활용 예시 - 친구 추가 시 자동 줄바꿈

--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -130,18 +130,14 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <com.nex3z.flowlayout.FlowLayout
                 android:id="@+id/friendListLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="조경진  "/>
-
-            </LinearLayout>
+            </com.nex3z.flowlayout.FlowLayout>
 
             <TextView
                 android:layout_width="wrap_content"
