위치 정보 획득 - 권한부터 물어보기

--- a/app/src/main/res/layout/activity_view_appointment_detail.xml
+++ b/app/src/main/res/layout/activity_view_appointment_detail.xml
@@ -110,9 +110,13 @@
                         android:orientation="vertical"
                         android:layout_marginTop="10dp">
 
-
-
                     </LinearLayout>
+
+                    <Button
+                        android:id="@+id/arrivalBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="도착 인증하기"/>
 
                 </LinearLayout>
 
