#4 장소명/위경도 UI에 반영 noti 아직 하는 중

--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -151,7 +151,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/paceSearchEdt"
+                    android:id="@+id/placeSearchEdt"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
