#2 알림 리스트는 못받아왔는데 알람 읽음 처리는 해놓음 근데 메인에서 계속 빨간게 안사라짐 다른 곳에서는 사라지는데

--- a/app/src/main/res/layout/activity_view_notification.xml
+++ b/app/src/main/res/layout/activity_view_notification.xml
@@ -8,10 +8,27 @@
         android:orientation="vertical"
         tools:context=".ViewNotificationActivity">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/notificationRecyclerView"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/notificationRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <Button
+                android:id="@+id/readBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="읽음 처리"
+                android:layout_gravity="right|bottom"
+                android:layout_marginRight="40dp"
+                android:layout_marginBottom="40dp"/>
+
+        </FrameLayout>
+
+
 
     </LinearLayout>
 </layout>
