약속 수정하기 인터페이스랑 UI수정 작업 함

--- a/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/app/src/main/res/layout/my_custom_action_bar.xml
@@ -41,7 +41,7 @@
             android:layout_height="10dp"
             android:src="@color/red"
             android:layout_marginTop="4dp"
-            android:visibility="gone"
+            android:visibility="invisible"
             android:layout_marginLeft="22dp"/>
 
     </FrameLayout>
