--- a/app/src/main/res/layout/activity_view_appointment_detail.xml
+++ b/app/src/main/res/layout/activity_view_appointment_detail.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ViewAppointmentDetailActivity">
@@ -18,9 +18,9 @@
 
                 <fragment
                     android:id="@+id/naverMapFrag"
+                    class="com.naver.maps.map.MapFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    class="com.naver.maps.map.MapFragment"/>
+                    android:layout_height="250dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -31,8 +31,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical">
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/titleTxt"
@@ -40,15 +40,22 @@
                             android:layout_height="wrap_content"
                             android:text="약속 제목 자리"
                             android:textColor="@color/black"
-                            android:textSize="20sp"/>
+                            android:textSize="20sp" />
 
                         <TextView
                             android:id="@+id/invitedFriendCountTxt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:text="참여인원(n명)"
-                            android:textSize="16sp"
-                            android:layout_marginLeft="5dp"/>
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/modifyBtn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="92dp"
+                            android:text="수정하기" />
 
                     </LinearLayout>
 
@@ -56,95 +63,94 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
                         android:gravity="center_vertical"
-                        android:layout_marginTop="10dp">
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
-                            android:src="@drawable/location_icon"/>
+                            android:src="@drawable/location_icon" />
 
                         <TextView
                             android:id="@+id/placeTxt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="장소 이름"
-                            android:textSize="16sp"/>
+                            android:textSize="16sp" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
                         android:gravity="center_vertical"
-                        android:layout_marginTop="10dp">
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
-                            android:src="@drawable/time_2_icon"/>
+                            android:src="@drawable/time_2_icon" />
 
                         <TextView
                             android:id="@+id/timeTxt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="9/3 오후 6:03"
-                            android:textSize="16sp"/>
+                            android:textSize="16sp" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
                         android:layout_marginTop="20dp"
-                        android:gravity="center_vertical">
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="친구 목록"
-                            android:textSize="18sp"
-                            android:textColor="@color/black"/>
+                            android:textColor="@color/black"
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"/>
+                            android:layout_weight="1" />
 
                         <LinearLayout
                             android:id="@+id/refreshBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
                             android:gravity="center_vertical"
+                            android:orientation="horizontal"
                             android:padding="5dp">
 
                             <ImageView
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
                                 android:padding="2dp"
-                                android:src="@drawable/refresh_icon"/>
+                                android:src="@drawable/refresh_icon" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="새로고침"/>
+                                android:text="새로고침" />
 
                         </LinearLayout>
 
                     </LinearLayout>
 
 
-
                     <LinearLayout
                         android:id="@+id/invitedFriendsLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_marginTop="10dp">
+                        android:layout_marginTop="10dp"
+                        android:orientation="vertical">
 
                     </LinearLayout>
 
@@ -152,7 +158,7 @@
                         android:id="@+id/arrivalBtn"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="도착 인증하기"/>
+                        android:text="도착 인증하기" />
 
                 </LinearLayout>
 
