네이버로그인 - 라이브러리 + 필요 string.xml 세팅 , 네이버 모듈 불러내기

--- a/app/src/main/res/layout/activity_view_appointment_detail.xml
+++ b/app/src/main/res/layout/activity_view_appointment_detail.xml
@@ -56,13 +56,13 @@
                             android:layout_weight="1"/>
 
                         <LinearLayout
+                            android:id="@+id/modifyLayout"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
                             android:gravity="center_vertical">
 
                             <TextView
-                                android:id="@+id/modifyBtn"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="약속 수정하기" />
