네이버 로그인 화면 불러내서 로그인 성공 시 토큰 추출

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,6 +89,15 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/kakaotalk_image"/>
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
+
+            <ImageView
+                android:id="@+id/naverLoginBtn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/naver_icon"/>
 
         </LinearLayout>
 
