ModifyAppointmentActivity.kt에서 mAppointmentData가 안받아와짐.. 코드는 값을 넣어주니까 됨 이윤 모름

--- a/app/src/main/res/layout/activity_edit_appoinment.xml
+++ b/app/src/main/res/layout/activity_edit_appoinment.xml
@@ -136,9 +136,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-            </com.nex3z.flowlayout.FlowLayout>
+                android:orientation="horizontal"/>
 
             <TextView
                 android:layout_width="wrap_content"
