--- a/app/src/main/res/layout/activity_modify_appointment.xml
+++ b/app/src/main/res/layout/activity_modify_appointment.xml
@@ -15,6 +15,7 @@
             android:text="약속의 제목을 입력해 주세요"/>
 
         <EditText
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="변경하실 약속의 제목을 입력해 주세요"/>
@@ -63,6 +64,38 @@
                 android:layout_weight="1"/>
 
         </LinearLayout>
+
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="다시 초대하기"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/myFriendSpinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/addFriendToListBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="참여하기"/>
+
+        </LinearLayout>
+
+        <com.nex3z.flowlayout.FlowLayout
+            android:id="@+id/friendListLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"/>
 
         <TextView
             android:layout_width="wrap_content"
