--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,8 @@
             android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이메일"/>
+            android:text="아이디"
+            android:textColor="@color/black"/>
 
         <EditText
             android:id="@+id/emailEdt"
@@ -27,6 +28,7 @@
             android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:text="비밀번호"/>
 
         <EditText
