--- a/app/src/main/res/layout/activity_view_notification.xml
+++ b/app/src/main/res/layout/activity_view_notification.xml
@@ -6,29 +6,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:padding="10dp"
         tools:context=".ViewNotificationActivity">
 
-        <FrameLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/notificationRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/notificationRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-            <Button
-                android:id="@+id/readBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="읽음 처리"
-                android:layout_gravity="right|bottom"
-                android:layout_marginRight="40dp"
-                android:layout_marginBottom="40dp"/>
-
-        </FrameLayout>
-
-
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 </layout>
