--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,60 +9,64 @@
         android:layout_height="match_parent"
         android:padding="20dp"
         android:orientation="vertical">
-
+        
         <TextView
-            android:layout_marginTop="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="아이디"
-            android:textColor="@color/black"/>
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:textSize="30sp"
+            android:background="@null"
+            android:text="How \n Manage \n Your \n Appointment"
+            android:gravity="center"/>
 
         <EditText
+            android:layout_marginTop="30dp"
             android:id="@+id/emailEdt"
+            android:background="@drawable/edittext_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="15dp"
             android:inputType="textEmailAddress"
             android:hint="이메일을 입력하세요"/>
 
-        <TextView
-            android:layout_marginTop="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="비밀번호"/>
-
         <EditText
             android:id="@+id/pwEdt"
+            android:padding="15dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/edittext_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="비밀번호를 입력하세요"/>
 
         <Button
+            android:textSize="17sp"
             android:id="@+id/loginBtn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/login_button_background"
             android:text="로그인"/>
 
         <Button
+            android:textSize="17sp"
             android:id="@+id/sighUpBtn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/login_button_background"
             android:text="회원가입"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="50dp"
             android:text="쉬운 로그인하기"/>
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal">
 
             <ImageView
