--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="yellow">#EDB71E</color>
     <color name="lavender">#DBD8ED</color>
     <color name="lavender_25">#40DBD8ED</color>
+    <color name="lightgreen">#C1DCC6</color>
 </resources>
